# causal_images

./: .gitignore  README.md  counterfactual.py  export.py  main.py  pyproject.toml  render_batches.sh  sample.py
causal_images/: camera.py  render.py  scene.py  scm.py  util.py
examples/: scm.py
examples/1dcubes_0.05_child_noise/: noise_encodings.py
examples/1dcubes_0.05_child_noise/original/: config.json  sampling.json  scm.py
examples/1dcubes_0.05_child_noise/same_mechanism/: pos_y2.py  pos_y3.py
examples/1dcubes_equi_child_noise/: noise_encodings.py
examples/1dcubes_equi_child_noise/original/: config.json  sampling.json  scm.py
examples/1dcubes_equi_child_noise/same_mechanism/: pos_y1.py  pos_y3.py
examples/2dcubes_equiscale_0.05_child_noise/: noise_encodings.py
examples/2dcubes_equiscale_0.05_child_noise/original/: config.json  sampling.json  scm.py
examples/2dcubes_equiscale_0.05_child_noise/same_mechanism/: pos_x2.py  pos_x3.py
examples/2dcubes_equiscale_equi_child_noise/original/: config.json  sampling.json  scm.py
examples/2dcubes_equiscale_equi_child_noise/same_mechanism/: pos_x3.py  pos_y3.py
examples/2dcubes_equiscale_perspective_equi_child_noise/: noise_encodings.py
examples/basic/: config.json  sampling.json  scm.py
examples/conditional/: config.json  sampling.json  scm.py
examples/counterfactual/: interventions.py
notebooks/: composite_image.ipynb  compress.ipynb  create_causal_variable_dataset.ipynb  evaluate_dataset.ipynb  evaluate_sequence_dataset.ipynb
tests/: test_causal_images.py
(+13 files in other folders)
