[tool.poetry]
name = "causal_images"
version = "0.1.0"
description = ""
authors = ["Jonas Bernhard <jonasbernhard96@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
blenderproc = { path="../BlenderProc", develop = true }
scipy = "^1.8.1"
scmodels = "^0.2"
dill = "^0.3.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
