[tool.poetry]
name = "causal_images"
version = "0.1.0"
description = ""
authors = ["Jonas Bernhard <jonasbernhard96@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
scipy = "^1.8.1"
scmodels = {git = "git@github.com:yolibernal/scmodels.git", rev = "individual-samples"}
dill = "^0.3.5"
blenderproc = "^2.4.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
